[Bug] Fix double scrollbars (#504)
* Remove redundant styles

* Remove redundant styles introduced in #417

* Apply max-height to response code

--- a/packages/docusaurus-theme-openapi-docs/src/theme/styles.css
+++ b/packages/docusaurus-theme-openapi-docs/src/theme/styles.css
@@ -161,14 +161,6 @@
   margin-right: 1rem;
 }
 
-/* Code block */
-
-.theme-api-markdown code {
-  max-width: 600px;
-  max-height: 500px;
-  overflow: auto;
-}
-
 /* Version button */
 
 .version-button div {
@@ -516,4 +508,9 @@
 
 div:has(> ul.openapi-tabs__security-schemes) {
   max-width: 100%;
+}
+
+.openapi-demo__code-block code {
+  max-height: 500px;
+  overflow: auto;
 }
